# odbcx

./: .appveyor.yml  .travis.yml  CMakeLists.txt  README.md  jamroot.jam
examples/: CMakeLists.txt  jamfile.jam  select.cpp
examples/select/: CMakeLists.txt  jamfile.jam  main.cpp
odbcx/: CMakeLists.txt  adapter.hpp  attribute.hpp  cursor.hpp  handle.hpp  iterator.h  iterator.hpp  jamfile.jam  odbcx.h  odbcx.hpp  query.h  query.hpp  reader.h  transaction.cpp  transaction.h  transaction.hpp  type_info.hpp  utility.cpp  utility.h  utility.hpp
odbcx/bindings/: adapter.hpp  columns.hpp  flyweight.hpp  in.h  in.hpp  out.h  out.hpp  surrogate.hpp  ttraits.h  ttraits.hpp
odbcx/details/: attribute.hpp  bookmark.hpp  cast.hpp  cursor.hpp  diversion.hpp  handle.hpp  iterator.hpp  odbc.hpp  query.hpp  statement.h  statement.hpp
test/: CMakeLists.txt  bindings_test.cpp  blob_test.cpp  connections.cpp  connections.hpp  dd.h  dd.hpp  fail_in_1_test.cpp  fail_in_test.cpp  fail_select_stmt1_test.cpp  flyweight_test.cpp  handle_test.cpp  iterator_test.cpp  jamfile.jam  modifiable_cursor_test.cpp  select_optional_test.cpp  select_statments_test.cpp  simple_queries_test.cpp  surrogate_test.cpp  test.cpp  test.hpp  tests.cpp  tests.h  tests.hpp  transactions_test.cpp  ttraits_tests.cpp
test/dsn/: mssql.dsn  mssql17.dsn  mysql.dsn  mysql5_3.dsn  oracle.dsn  postgres.dsn  postgres64.dsn  psql.dsn
test/sql/: mssql.sql  mysql.sql  postgress.sql
